adjust paging respnse
